--- a/.github/workflow/cicd.yaml
+++ b/.github/workflow/cicd.yaml
@@ -47,8 +47,7 @@ jobs:
     
     - name: Install dependencies
       run: npm install
-    
+    #find the deploy hook key from Render Dashboard of your application
     -  name: Trigger Render Deploy
        run: |
-          curl -X POST https://api.render.com/deploy/srv-xxxxxx?key=DEPLOY_HOOK_KEY
-       
+          curl -X POST https://api.render.com/deploy/srv-d17c583e5dus73doie1g?key=${{ secrets.RENDER_HOOK }}
