--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -17,30 +17,38 @@ jobs:
     steps:
     - name: Get our code
       uses: actions/checkout@v4
-      
+    
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'  # This caches npm dependencies for faster builds
-        
+    
     - name: Install dependencies
-      run: npm ci  # Use npm ci instead of npm install for faster, reliable builds
-      
+      run: npm install
+    
     - name: Run tests
       run: npm test
 
   # Job 2: Deploy (only when pushing to main)
   deploy:
-    name: Deploy to Render
+    name: Deploy Application
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
     
     steps:
-    - name: Trigger Render Deploy
-      run: |
-        curl -X POST "https://api.render.com/deploy/srv-d17c583e5dus73doie1g?key=${{ secrets.RENDER_HOOK }}"
-      env:
-        # Optional: Add timeout to prevent hanging
-        CURL_TIMEOUT: 30
+    - name: Get our code
+      uses: actions/checkout@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+    
+    - name: Install dependencies
+      run: npm install
+    #find the deploy hook key from Render Dashboard of your application
+    -  name: Trigger Render Deploy
+       run: |
+          curl -X POST https://api.render.com/deploy/srv-d17c583e5dus73doie1g?key=${{ secrets.RENDER_HOOK }}
